<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_profile_office"
            android:icon="@drawable/user"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_local_phone_black_24dp"
                android:title="@string/contact_us" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/about"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />

        </menu>
    </item>

</menu>
