<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.laffayeh.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.laffayeh.fragment.MyProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_my_profile_office"
        android:name="com.example.laffayeh.fragment.MyProfileOfficeFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_my_profile_office" />


    <fragment
        android:id="@+id/nav_add_adv"
        android:name="com.example.laffayeh.fragment.AddAdvFragment"
        android:label="@string/add_adv"
        tools:layout="@layout/fragment_add_adv" />

    <fragment
        android:id="@+id/nav_edit_adv"
        android:name="com.example.laffayeh.fragment.EditAdvFragment"
        android:label="@string/edit_adv"
        tools:layout="@layout/fragment_edit_adv" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.laffayeh.fragment.FavFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_fav" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.laffayeh.fragment.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.laffayeh.fragment.LogoutFragment"
        android:label="@string/add_adv"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.laffayeh.fragment.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />


    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.laffayeh.fragment.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.laffayeh.fragment.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact_us" />

</navigation>