<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/t"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/age"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/etAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t6" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/Wednesday"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t5" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="8dp"
        android:text="@string/Thursday"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintStart_toEndOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="8dp"
        android:text="@string/Friday"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintStart_toEndOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/Saturday"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/checkBox6"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/Sunday"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintStart_toEndOf="@+id/t5"
        app:layout_constraintTop_toBottomOf="@+id/spWorkHours" />

    <ImageView
        android:id="@+id/imgAdv"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginRight="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/t1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/laffayeh" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:text="@string/Language"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/spLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAdv" />

    <Spinner
        android:id="@+id/spLanguage"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/my_et"
        android:entries="@array/Language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t1"
        app:layout_constraintTop_toBottomOf="@+id/imgAdv" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:text="@string/Nationality"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/spNationality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1" />

    <Spinner
        android:id="@+id/spNationality"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/my_et"
        android:entries="@array/Nationality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t2"
        app:layout_constraintTop_toBottomOf="@+id/spLanguage" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:text="@string/Religion"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/spReligion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2" />

    <Spinner
        android:id="@+id/spReligion"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/my_et"
        android:entries="@array/Religion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t3"
        app:layout_constraintTop_toBottomOf="@+id/spNationality" />


    <TextView
        android:id="@+id/t4"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:text="@string/Work_hours"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/spWorkHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

    <Spinner
        android:id="@+id/spWorkHours"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/my_et"
        android:entries="@array/Work_hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t4"
        app:layout_constraintTop_toBottomOf="@+id/spReligion" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:text="@string/Work_days"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t4" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:text="@string/experience"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/spExperience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <Spinner
        android:id="@+id/spExperience"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/my_et"
        android:entries="@array/exp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t6"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

    <Button
        android:id="@+id/btnAdd"
        style="@android:style/Widget.Button"
        android:layout_width="@dimen/_136sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_56sdp"
        android:layout_marginBottom="@dimen/_36sdp"
        android:background="@color/colorAccent"
        android:text="@string/edit_adv"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spExperience"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/Monday"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/spWorkHours" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/Tuesday"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/spWorkHours" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/my_et"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t"
        app:layout_constraintTop_toBottomOf="@+id/spExperience" />
</androidx.constraintlayout.widget.ConstraintLayout>